# FastAPI-Basic

./: .gitignore  Dockerfile  README.md  collection.json  compose.dev.yaml  compose.test.yaml  compose.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml
app/: __init__.py
app/database/: __init__.py  imports.py  insertData.py
app/database/scripts/: regra_test.sql  user_test.sql
app/dependencies/: __init__.py  dependency.py
app/dependencys/: __init__.py  dependency.py
app/models/: cargoModel.py  controllerModel.py  regraModel.py  userModel.py  usuarioModel.py
app/routers/: __init__.py  auth.py  authRouter.py  mail.py  test.py  user.py
app/schemas/: AuthSchema.py  mailSchema.py  userSchema.py
app/swagger_models/: cargoResponses.py  mailResponses.py  userResponses.py
app/utils/: fieldsFormatter.py  filterBuilder.py
docker/: requirements.txt
docs/: authentication.md  compose_files.md  database_diagram.sql  environment_variables.md  google_mail.md  signup_steps.md
scripts/: clear_db.sh
setup/: clear_db.sh
templates/: databaseError.html  emailExpired.html  emailInvalidToken.html  emailSuccess.html  emailVerify.html
tests/: conftest.py  test_auth.py  test_model.py
